[package]
name = "bevy-nodemoui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.12.1", features = [
    "dynamic_linking", # Dont add "dynamic_linking" to release builds 
] }
bevy-inspector-egui = "0.22.1"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[lints.clippy]
too_many_lines = "allow"
module_name_repetitions = "allow" # Bevy uses the Suffix `Plugin` for plugins structs.
# pedantic = "warn"
